populate lasagna html with image of recipe, description, and lists of ingredients and steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,26 @@
 
     <body>
         <h1>Lasagna Recipe</h1>
+        <img src="Best-Lasagna-550-500x375.jpg"/><br/>
+        <p>It's lasagna time, yummy yummy delicious lasagna.  I just want some four cheese paaaaaaaaaaaaaaaaaaaaaaaaaaaaasta</p>
+        
+        <h3>Ingredients</h3>
+        <ol>
+            <li>2 teaspoons extra virgin olive oil</li>
+            <li>1 pound ground beef</li>
+            <li>1/2 medium onion, diced (about 3/4 cup)</li>
+            <li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 (28-ounce)can good-quality tomato sauce</li>
+            <li>3 ounces tomato paste (half a 6-ounce can)</li>
+        </ol>
+        
+        <h3>Steps</h3>
+        <ul>
+            <li>Start by making the sauce with ground beef, bell peppers, onions, and a combo of tomato sauce, tomato paste, and crushed tomatoes. The three kinds of tomatoes gives the sauce great depth of flavor.</li>
+            <li>Let this simmer while you boil the noodles and get the cheeses ready. We're using ricotta, shredded mozzarella, and parmesan -- like the mix of tomatoes, this 3-cheese blend gives the lasagna great flavor!</li>
+            <li>From there, it's just an assembly job. A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until you have three layers and have used up all the ingredients.</li>
+            <li>Bake until bubbly and you're ready to eat!</li>
+        </ul>
     </body>
 </html>
